# tcp_proxy

./: .gitignore  GUI_README.md  LICENSE  README.md  gui.css  gui.py  pyproject.toml  run_proxy.sh  tcp_proxy.py
config/: config.yaml
tests/: mn_mitm.py  mn_python.py  test_config_loading.py  test_decoder_frames.py  test_gui.py  test_insert_data_action.py  test_insert_feature.py  test_loopback.py  test_payload_handler_rules.py  test_replay_pcap.py  test_rule_action_modules.py  test_tcp_proxy_runtime.py
tets/: mn_mitm.py
utils/: block_action.py  config_loading.py  contracts.py  decode_pickle.py  decode_tcp.py  delay_action.py  insert_action.py  insert_data_action.py  mitm_attack_handler.py  payload_handling.py  replay_action.py
